--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: rustup component add llvm-tools-preview
 
       - name: Install protoc
         run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
@@ -172,3 +173,56 @@ jobs:
             renode.log
             **/renode.log
           if-no-files-found: warn
+
+  sanitize:
+    name: Sanitizers (asan/ubsan)
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        sanitizer: [address, undefined]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@nightly
+      - name: Set sanitizer flags
+        run: |
+          echo "RUSTFLAGS=-Zsanitizer=${{ matrix.sanitizer }}" >> $GITHUB_ENV
+          echo "RUSTDOCFLAGS=-Zsanitizer=${{ matrix.sanitizer }}" >> $GITHUB_ENV
+      - name: Build tests with sanitizer
+        run: cargo test -Zbuild-std --target x86_64-unknown-linux-gnu
+        env:
+          RUSTC_BOOTSTRAP: 1
+      - name: Run tests
+        run: cargo test -- --nocapture
+        env:
+          ASAN_OPTIONS: detect_leaks=1
+
+  coverage:
+    name: Coverage (llvm-cov gate)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install llvm tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y llvm llvm-tools
+      - name: Install cargo-llvm-cov
+        run: cargo install cargo-llvm-cov
+      - name: Run coverage with threshold
+        run: |
+          cargo llvm-cov --lcov --output-path lcov.info --fail-under-lines 80
+      - name: Upload lcov
+        uses: actions/upload-artifact@v4
+        with:
+          name: lcov.info
+          path: lcov.info
+
+  cargo-deny:
+    name: cargo-deny
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: EmbarkStudios/cargo-deny-action@v1
+        with:
+          command: check
+          arguments: --all-features
