--- a/.github/workflows/afl.yml
+++ b/.github/workflows/afl.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install protoc
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       - name: Install cargo-afl
         run: cargo install cargo-afl
 
