--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -8,23 +8,30 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install protoc
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
       - uses: dtolnay/rust-toolchain@nightly
+
       - name: Install cargo-fuzz
         run: cargo install cargo-fuzz
+
       - name: Build corpus (examples)
         run: cargo +nightly run --example gen_seeds
+
       - name: Fuzz (short smoke)
         run: |
           set -e
           cargo +nightly fuzz run frame_decode -- -runs=20000 -dict=fuzz/dict/calc.dict || true
+
       - name: Collect fuzz artifacts
         if: ${{ always() }}
         run: |
           mkdir -p fuzz_artifacts
-          # cargo-fuzz writes crashes to fuzz/artifacts/<target>/
           [ -d fuzz/artifacts/frame_decode ] && cp -r fuzz/artifacts/frame_decode fuzz_artifacts/ || true
-          # optional: copy latest corpus
           cp -r fuzz/corpus fuzz_artifacts/corpus || true
+
       - name: Upload fuzz artifacts
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
