--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,19 @@ r5/*.o
 r5/host-smoke
 r5/calc.pb-c.c
 r5/calc.pb-c.h
+
+# keep fuzz seeds & dict in VCS
+!fuzz/
+!fuzz/corpus/**
+!fuzz/dict/**
+
+# keep fuzz seeds & dict in VCS
+!fuzz/
+!fuzz/corpus/**
+!fuzz/dict/**
+
+# fuzz / afl junk
+afl_out/
+afl_corpus/
+afl-harness/target/
+**/target/
