--- a/.github/workflows/afl-smoke.yml
+++ b/.github/workflows/afl-smoke.yml
@@ -71,8 +71,8 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
+          shopt -s nullglob globstar
           mkdir -p ci_artifacts
-          shopt -s nullglob
           for d in afl-out* afl_artifacts/* fuzz/**/artifacts; do
             [ -d "$d" ] || continue
             for sub in queue crashes hangs; do
@@ -82,12 +82,12 @@ jobs:
               fi
             done
           done
+          ls -l ci_artifacts || true
+      
       - name: Upload AFL artifacts
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          if-no-files-found: ignore
           name: afl-out-${{ github.run_id }}
-        path: ci_artifacts/*.tar.gz
-            afl-out-${{ github.run_id }}.tar.gz
-          if-no-files-found: warn
+          path: ci_artifacts/*.tar.gz
+          if-no-files-found: ignore
