deps: add opentelemetry_sdk 0.22 for tracing example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rand = "0.8"
 tracing-opentelemetry = "0.23"
 opentelemetry = { version = "0.22", features = ["trace"] }
 opentelemetry-jaeger = { version = "0.21", features = ["rt-tokio"] }
+opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
 [build-dependencies]
 prost-build = "0.12"
 
