--- a/.github/workflows/fuzz.yml
+++ b/.github/workflows/fuzz.yml
@@ -1,7 +1,7 @@
-name: fuzz-smoke
+name: fuzz
 on:
+  push:
   pull_request:
-  push: { branches: [ main, "ci/**", "chore/**", "feat/**" ] }
 
 jobs:
   fuzz:
@@ -9,33 +9,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install protoc
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
-
+      # Use nightly for fuzzing (needed for -Z flags that cargo-fuzz uses)
       - uses: dtolnay/rust-toolchain@nightly
 
-      - name: Install cargo-fuzz
-        run: cargo install cargo-fuzz
-
-      - name: Build corpus (examples)
-        run: cargo +nightly run --example gen_seeds
-
-      - name: Fuzz (short smoke)
+      - name: Install clang/llvm and cargo-fuzz
         run: |
-          set -e
-          cargo +nightly fuzz run frame_decode -- -runs=20000 -dict=fuzz/dict/calc.dict || true
+          sudo apt-get update
+          sudo apt-get install -y clang llvm
+          cargo install cargo-fuzz
 
-      - name: Collect fuzz artifacts
-        if: ${{ always() }}
+      # Run the frame_decode target for 60s. cargo-fuzz handles RUSTFLAGS/-Z.
+      - name: Run cargo-fuzz (frame_decode)
         run: |
-          mkdir -p fuzz_artifacts
-          [ -d fuzz/artifacts/frame_decode ] && cp -r fuzz/artifacts/frame_decode fuzz_artifacts/ || true
-          cp -r fuzz/corpus fuzz_artifacts/corpus || true
+          cd fuzz
+          cargo +nightly fuzz run frame_decode -- -max_total_time=60 -rss_limit_mb=2048
 
-      - name: Upload fuzz artifacts
-        if: ${{ always() }}
+      # Tar outputs so we don't upload files with ':' in names (GitHub Artifact restriction)
+      - name: Package fuzz outputs
+        if: always()
+        run: |
+          mkdir -p fuzz_out
+          tar -czf fuzz_out/corpus.tar.gz    -C fuzz corpus/frame_decode  || true
+          tar -czf fuzz_out/artifacts.tar.gz -C fuzz artifacts/frame_decode || true
+
+      - name: Upload fuzz results
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: fuzz-${{ github.run_id }}
-          path: fuzz_artifacts
-          if-no-files-found: warn
+          name: fuzz-results
+          path: fuzz_out/
+          retention-days: 14
