--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,77 +1,31 @@
 name: CI
+
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
-env:
-  ARTIFACT_SUFFIX: ${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
 jobs:
   build-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install protoc
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
-
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          overwrite: true
-          components: clippy, rustfmt
 
       - uses: Swatinem/rust-cache@v2
 
-      - name: Build
-        run: cargo build --verbose
+      - name: Build (all targets)
+        run: cargo build --all-targets --locked
 
-      - name: Test
-        run: cargo test --all --verbose
-
-      - name: Format check
-        run: cargo fmt --all -- --check
-
-      - name: Clippy (deny warnings)
-        run: cargo clippy --all-targets -- -D warnings
-
-      # --- Coverage (lcov) ---
-      - name: Install llvm-tools + cargo-llvm-cov
-        run: |
-          rustup component add llvm-tools-preview
-          cargo install cargo-llvm-cov
-      - name: Coverage (lcov)
-        run: cargo llvm-cov --workspace --lcov --output-path lcov.info
-      - name: Upload coverage (lcov)
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: coverage-lcov-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: lcov.info
-
-      # --- JUnit report ---
-      - name: Install nightly + cargo2junit
-        run: |
-          rustup toolchain install nightly
-          cargo install cargo2junit
-      - name: Tests → JUnit
-        run: cargo +nightly test --all -- -Z unstable-options --format json | cargo2junit > junit.xml
-      - name: Upload JUnit
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: junit-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: junit.xml
+      - name: Test (all)
+        run: cargo test --all --locked
 
   fuzz-smoke:
     runs-on: ubuntu-latest
+    needs: build-test
     steps:
       - uses: actions/checkout@v4
-
-      - name: Install deps
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
 
       - uses: dtolnay/rust-toolchain@nightly
 
@@ -83,10 +37,19 @@ jobs:
       - name: Run fuzz smoke (20s)
         run: cargo +nightly fuzz run frame_decode -- -max_total_time=20 -print_final_stats=1
 
+      # Pack any fuzz outputs to avoid illegal filename characters in artifacts (e.g. ':')
       - name: Pack fuzz outputs (tar)
-        if: always()
+        if: ${{ always() }}
         shell: bash
-        run: .github/scripts/pack_fuzz_artifacts.sh
+        run: |
+          set -euo pipefail
+          mkdir -p _artifacts
+          for d in fuzz/artifacts/* fuzz/corpus/*; do
+            [ -d "$d" ] || continue
+            base="$(echo "$d" | tr '/:' '__')"
+            tar -czf "_artifacts/${base}.tgz" -C "$(dirname "$d")" "$(basename "$d")" || true
+          done
+
       - name: Upload fuzz artifacts
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
@@ -94,12 +57,15 @@ jobs:
           overwrite: true
           name: fuzz-output-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
           path: _artifacts/*.tgz
+
       - name: Run Renode smoke in Docker
+        if: ${{ always() }}
         run: |
           docker run --rm \
             -v "${{ github.workspace }}:/work" \
             -w /work antmicro/renode:latest \
             sh -lc 'renode --console -e "mach create; quit"' | tee renode.log
+
       - name: Upload Renode log
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
@@ -107,49 +73,3 @@ jobs:
           overwrite: true
           name: renode-log-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
           path: renode.log
-
-      - name: Upload JUnit
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: junit-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: |
-            junit.xml
-            target/nextest/ci/junit.xml
-            **/junit.xml
-          if-no-files-found: warn
-
-      - name: Upload coverage (lcov)
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: coverage-lcov-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: |
-            lcov.info
-            target/coverage/lcov.info
-            **/lcov.info
-          if-no-files-found: warn
-
-      - name: Upload fuzz corpus
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: fuzz-output-b-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: |
-            fuzz/corpus/**
-            **/corpus/**
-          if-no-files-found: warn
-
-      - name: Upload Renode log
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v4
-        with:
-          overwrite: true
-          name: renode-log-b-${{ github.job }}-${{ github.run_id }}-${{ github.run_attempt }}
-          path: |
-            renode.log
-            **/renode.log
-          if-no-files-found: warn
